--- a/style.css
+++ b/style.css
@@ -478,6 +478,147 @@ span{
 /*tarjetas giratorias (index)*/ 
 
 
+.precio { 
+    width: 100%; 
+    height: 100vh;
+    box-sizing: border-box; 
+    padding: 100px 0;
+    background: #000000; 
+}   
+
+.carda { 
+    position: relative; 
+    max-width: 300px; 
+    height: auto; 
+    /* background: linear-gradient (-45deg, #fe0847, #feae3f); */ 
+    border-radius: 15px; 
+    margin: 0;
+    padding:  20px;
+    box-shadow: 0 10px 15px rgb(0, 0, 0, 0.3); 
+    transition: 0.5s; 
+    overflow: hidden; 
+   text-align: center;
+   
+    }
+    
+
+  
+    
+    .carda:hover { 
+        transform: scale(1.1);
+    } 
+    
+
+.carda:hover { 
+    transform: scale(1.1);
+} 
+
+.col-sm-4:nth-child(1) .carda,
+.col-sm-4:nth-child(1) .carda .teo .fas { 
+    background: linear-gradient(-45deg, #3E5151, #DECBA4);
+}
+
+
+.col-sm-4:nth-child(2) .carda,
+.col-sm-4:nth-child(2) .carda .teo .fas { 
+     background: linear-gradient( -45deg, red, black);
+} 
+
+.col-sm-4:nth-child(3) .carda,
+.col-sm-4:nth-child(3) .carda .teo  .fas { 
+    background: linear-gradient(-45deg, black, gold);
+} 
+
+.carda:before {
+content: "";
+position: absolute; 
+bottom: 0;
+left: 0;
+width: 100%;
+height: 40%; 
+background: rgb(255, 255, 255, 0.1); 
+z-index: 1;
+transform: skewY(-5deg) scale(1.5);  
+}  
+
+.teo .fas { 
+    color: #fff;
+    font-size: 60px; 
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 100px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3); 
+} 
+
+.teo h2 { 
+    position: relative;
+    margin:20px 0 0 ; 
+    padding: 0;
+    color: #000000;
+    font-size: 28px;
+    z-index: 2;
+}
+
+
+.pleo {
+    position: relative;
+    z-index: 2; 
+}  
+
+
+.pleo h4 { 
+    margin: 0;
+    padding: 20px 0; 
+    color: #000000;
+    font-size: 60px; 
+} 
+
+.option { 
+    position: relative;
+    z-index: 2;
+} 
+
+.option ul {
+    margin: 0;
+    padding: 0;
+} 
+
+.option ul li { 
+    margin: 0 0 10px;
+    padding: 0;
+    list-style: none;
+    color: #000000;
+    font-size: 16px;
+}  
+
+.carda a {
+    position: relative;
+    z-index: 2;
+    background: #fff;
+    color: #262626;
+    width: 150px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 40px;
+    display: block;
+    text-align: center;
+    margin: 20px auto 0;
+    font-size: 16px;
+    cursor: pointer;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+} 
+
+
+.carda a:hover {
+text-decoration: none;
+} 
+
+.vtn:hover {
+    background-color: #000000;
+    color: red;
+}
 
 
 
